--- a/index.html
+++ b/index.html
@@ -6,27 +6,120 @@
   <title>Grim3D - Miniaturas Hiperrealistas</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
-    body { font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; color: #111; background: #f4f4f4; }
-    header { background: #000; color: #fff; padding: 3rem 1rem; text-align: center; }
-    header h1 { margin: 0; font-size: 3rem; }
-    header p { font-size: 1.3rem; color: #aaa; }
-    nav { background: #111; display: flex; justify-content: center; gap: 2rem; padding: 1rem; }
-    nav a { color: #fff; text-decoration: none; font-weight: 600; transition: color 0.3s; }
-    nav a:hover { color: #ffcc00; }
-    section { padding: 3rem 1.5rem; max-width: 1200px; margin: auto; }
-    h2 { font-size: 2rem; color: #222; margin-bottom: 1rem; }
-    .gallery { display: flex; flex-wrap: wrap; justify-content: center; gap: 1.5rem; }
-    .gallery img { width: 100%; max-width: 300px; border-radius: 10px; box-shadow: 0 6px 12px rgba(0,0,0,0.15); }
-    footer { background: #000; color: #fff; text-align: center; padding: 2rem 1rem; margin-top: 4rem; }
-    form { display: flex; flex-direction: column; gap: 1rem; }
-    input, textarea { padding: 1rem; border-radius: 5px; border: 1px solid #ccc; font-size: 1rem; width: 100%; }
-    button { padding: 1rem; background: #000; color: #fff; border: none; border-radius: 5px; font-weight: bold; cursor: pointer; transition: background 0.3s ease; }
-    button:hover { background: #333; }
-    ul { padding-left: 1.5rem; }
-    li { margin-bottom: 0.5rem; }
-    .socials { margin-top: 1rem; }
-    .socials a { color: #fff; margin: 0 0.5rem; font-size: 1.5rem; transition: color 0.3s; }
-    .socials a:hover { color: #ffcc00; }
+    html {
+      scroll-behavior: smooth; /* Desplazamiento suave */
+    }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      color: #111;
+      background: #f4f4f4;
+    }
+    header {
+      background: #000;
+      color: #fff;
+      padding: 3rem 1rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 3rem;
+      letter-spacing: 1px;
+    }
+    header p {
+      font-size: 1.3rem;
+      color: #aaa;
+    }
+    nav {
+      background: #111;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
+      padding: 1rem;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: #ffcc00;
+    }
+    section {
+      padding: 3rem 1.5rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+    h2 {
+      font-size: 2rem;
+      color: #222;
+      margin-bottom: 1rem;
+    }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1.5rem;
+    }
+    .gallery img {
+      width: 100%;
+      max-width: 300px;
+      border-radius: 10px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+    }
+    footer {
+      background: #000;
+      color: #fff;
+      text-align: center;
+      padding: 2rem 1rem;
+      margin-top: 4rem;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    input, textarea {
+      padding: 1rem;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+      width: 100%;
+    }
+    button {
+      padding: 1rem;
+      background: #000;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    button:hover {
+      background: #333;
+    }
+    ul {
+      padding-left: 1.5rem;
+    }
+    li {
+      margin-bottom: 0.5rem;
+    }
+    .socials {
+      margin-top: 1rem;
+    }
+    .socials a {
+      color: #fff;
+      margin: 0 0.5rem;
+      font-size: 1.5rem;
+      transition: color 0.3s;
+    }
+    .socials a:hover {
+      color: #ffcc00;
+    }
   </style>
 </head>
 <body>
@@ -34,6 +127,7 @@
     <h1>Grim3D</h1>
     <p>Tu figura, tu esencia, nuestra obra</p>
   </header>
+
   <nav>
     <a href="#inicio">Inicio</a>
     <a href="#sobre">Nosotros</a>
@@ -42,14 +136,17 @@
     <a href="#servicios">Servicios</a>
     <a href="#contacto">Contacto</a>
   </nav>
+
   <section id="inicio">
     <h2>Transformamos tu imagen en arte</h2>
     <p>En <strong>Grim3D</strong> combinamos tecnología de escaneo 3D, impresión de alta precisión y pintura artesanal para crear miniaturas humanas hiperrealistas. Cada figura es única y está hecha con pasión y detalle.</p>
   </section>
+
   <section id="sobre">
     <h2>Sobre Nosotros</h2>
     <p>Somos un equipo multidisciplinario que mezcla creatividad, técnica y dedicación. Desde el primer escaneo hasta la última pincelada, cuidamos cada detalle para entregar piezas que emocionan y perduran.</p>
   </section>
+
   <section id="proceso">
     <h2>¿Cómo lo hacemos?</h2>
     <ol>
@@ -58,6 +155,7 @@
       <li><strong>Pintura:</strong> Artistas especializados dan vida a cada miniatura con pintura hiperrealista a mano.</li>
     </ol>
   </section>
+
   <section id="galeria">
     <h2>Galería</h2>
     <div class="gallery">
@@ -66,6 +164,7 @@
       <img src="placeholder3.jpg" alt="Miniatura personalizada 3">
     </div>
   </section>
+
   <section id="servicios">
     <h2>Servicios</h2>
     <ul>
@@ -76,6 +175,7 @@
       <li>Vitrinas acrílicas y peanas decoradas</li>
     </ul>
   </section>
+
   <section id="contacto">
     <h2>Contacto</h2>
     <form>
@@ -85,6 +185,7 @@
       <button type="submit">Enviar</button>
     </form>
   </section>
+
   <footer>
     <p>&copy; 2025 Grim3D. Miniaturas hiperrealistas hechas a mano.</p>
     <div class="socials">
