--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Grim3D - Miniaturas Hiperrealistas</title>
+ <meta name="google-site-verification" content="uXICgbxNvrg2G-UQU4O7_oO_3L1VE2z6acGTFQFuvX4" /> <title>Grim3D - Miniaturas Hiperrealistas</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
     html {
