--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Verificación de Google -->
+  <meta name="google-site-verification" content="uXICgbxNvrg2G-UQU4O7_oO_3L1VE2z6acGTFQFuvX4" />
+
+  <title>Grim3D - Miniaturas 3D en Sevilla | Bambinos 3D</title>
+
+  <!-- SEO básico -->
+  <meta name="description" content="Grim3D crea miniaturas humanas hiperrealistas en 3D desde Sevilla. Proyecto Bambinos 3D: impresión 3D profesional y personalizada.">
+  <meta name="keywords" content="miniaturas humanas 3D, miniaturas 3D Sevilla, Grim3D, Bambinos 3D, impresión 3D Sevilla, figuras personalizadas">
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Grim3D - Bambinos 3D" />
+
+  <!-- Open Graph (para redes sociales) -->
+  <meta property="og:title" content="Grim3D - Miniaturas 3D en Sevilla">
+  <meta property="og:description" content="Miniaturas humanas hiperrealistas creadas con tecnología 3D en Sevilla.">
+  <meta property="og:url" content="https://bambinos250622.github.io/grim3d/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="URL_DE_TU_IMAGEN_DESTACADA.jpg" />
+
+  <!-- Ícono del sitio -->
+  <link rel="icon" href="favicon.ico" />
+
+  <!-- Estilos CSS (si tienes un archivo styles.css) -->
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <h1>Grim3D - Miniaturas humanas 3D en Sevilla</h1>
+  </header>
+
+  <main>
+    <section>
+      <p>Bienvenido a Grim3D, un proyecto dedicado a la creación de miniaturas humanas hiperrealistas mediante tecnología de escaneo e impresión 3D. Desde Sevilla, trabajamos con acabados profesionales bajo la marca Bambinos 3D.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Grim3D - Bambinos 3D</p>
+  </footer>
+</body>
+</html>
